Make DropDown component fixed to avoid shifting page content
Updated DropDown styles to use position: fixed and z-index for overlay behavior and prevents DropDown from pushing down page content when opened.

--- a/src/app/components/navbar/styles/DropDown.module.scss
+++ b/src/app/components/navbar/styles/DropDown.module.scss
@@ -1,3 +1,10 @@
 $icons-size: 24px;
 
-
+.dropdownContainer {
+    position: fixed; 
+    top: 46px; 
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 999; 
+  }
